Fixed selector icon overlapping tags dropdown

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/tags/tags.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/ui/tags/tags.less
@@ -53,7 +53,7 @@
     position: absolute;
     top: 48px;
     left: 2px;
-    z-index: 1;
+    z-index: 5;
     background: white;
     margin-left: -1px;
     .input-border();
